aaron-live/live-deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"app1"},"name":"app1","namespace":"prod"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"app1"}},"template":{"metadata":{"labels":{"app":"app1"}},"spec":{"containers":[{"image":"nginx:latest","name":"app1","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2025-05-30T19:04:12Z"
  generation: 1
  labels:
    app: app1
  name: app1
  namespace: prod
  resourceVersion: "1848761"
  uid: 404d41ef-3ec7-4b61-872a-ea1562d92675
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app1
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: app1
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-05-30T19:04:14Z"
    lastUpdateTime: "2025-05-30T19:04:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-05-30T19:04:12Z"
    lastUpdateTime: "2025-05-30T19:04:14Z"
    message: ReplicaSet "app1-5b7d9d6985" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
