aaron-live/live-deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"app2"},"name":"app2","namespace":"prod"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"app2"}},"template":{"metadata":{"labels":{"app":"app2"}},"spec":{"containers":[{"image":"nginx:latest","name":"app2","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2025-05-30T19:04:35Z"
  generation: 1
  labels:
    app: app2
  name: app2
  namespace: prod
  resourceVersion: "1848894"
  uid: 033fbf9b-6865-499a-971b-2f85ae1aaddc
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: app2
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-05-30T19:04:36Z"
    lastUpdateTime: "2025-05-30T19:04:36Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-05-30T19:04:35Z"
    lastUpdateTime: "2025-05-30T19:04:36Z"
    message: ReplicaSet "app2-5cf7bd4fd7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
