aaron-live/live-service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"app2-service","namespace":"prod"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"app2"},"type":"ClusterIP"}}
  creationTimestamp: "2025-05-30T19:04:45Z"
  name: app2-service
  namespace: prod
  resourceVersion: "1848941"
  uid: 968df29d-07b5-455a-95f4-bccf7158648b
spec:
  clusterIP: 10.100.250.63
  clusterIPs:
  - 10.100.250.63
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
